<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hti.checkers.checkers.StartNewGame"
    android:orientation="vertical"
    android:background="@color/white"
    android:baselineAligned="false"
    tools:showIn="@layout/activity_start_new_game">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/welcome"
        android:textSize="@dimen/header_text_size"
        android:textAlignment="center"
        android:nestedScrollingEnabled="false"
        android:textStyle="bold"
        android:padding="5dp"
        android:textColor="@color/black"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Color"
        android:textSize="20sp"
        android:typeface="serif"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:gravity="left"
        android:padding="5dp"
        android:layout_below="@+id/welcome"
        android:layout_alignParentStart="false"
        android:id="@+id/textView" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/welcome">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black"
            android:id="@+id/blkButtom"
            android:checked="false"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:buttonTint="@color/black"
            android:padding="5dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkred"
            android:text="@string/red"
            android:id="@+id/redButton"
            android:checked="false"
            android:textSize="20sp"
            android:buttonTint="@color/darkred"
            android:typeface="serif"
            android:padding="5dp" />

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        android:onClick="mainActivity"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button4"
        android:padding="5dp"
        android:layout_above="@+id/button5"
        android:layout_alignStart="@+id/button5" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:onClick="closeStartNewGame"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:id="@+id/button5"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/welcome" />


</RelativeLayout>
