<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context="com.hti.checkers.checkers.MainActivity"
    tools:showIn="@layout/activity_main">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/check"
        android:contentDescription="@string/checkerboard"
        android:layout_marginBottom="200dp" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:rowCount="8"
        android:columnCount="8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|bottom"
        android:weightSum="2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:layout_gravity="left|bottom"
            android:weightSum="5"
            android:transitionGroup="true"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Player"
                android:id="@+id/PlayerScoreHeaderTV"
                android:layout_gravity="left|bottom"
                android:background="#000000"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textAlignment="center"
                android:paddingBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/PlayerScorePlaceHolder"
                android:id="@+id/PlayerScoreTv"
                android:background="#ffffff"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_weight="4.40"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:layout_gravity="right|bottom"
            android:weightSum="5"
            android:transitionGroup="true"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CPU"
                android:id="@+id/CPUScoreHeaderTV"
                android:layout_gravity="right|bottom"
                android:background="#000000"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textAlignment="center"
                android:paddingBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/CPUScorePlaceHolder"
                android:id="@+id/CPUScoreTV"
                android:background="#ffffff"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_weight="4.40"
                android:layout_marginLeft="2dp"
                android:gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>
